<resources>
    <string name="app_name">PDA</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="exit_again">再按一次退出程序</string>
    <string name="login_sign_in">业务员登录</string>
    <string name="login_sign_title">ATM业务员作业系统</string>
    <string name="login_add_mian_tv1">业务员1</string>
    <string name="login_add_mian_tv2">业务员2</string>
    <string name="login_add_mian_tv3">业务员3</string>
    <string name="login_add_mian_tv4">用户信息</string>
    <string name="add_login_edt_tip1">工号：</string>
    <string name="add_login_edt_tip2">密码：</string>
    <string name="add_login_edt_hit1">工号</string>
    <string name="add_login_edt_hit2">密码</string>
    <string name="add_login_error1">工号不能为空</string>
    <string name="add_login_error2">密码不能为空</string>
    <string name="add_login_toast_tip">请全部填写！</string>
    <string name="add_login_toast_no_pass">密码不能为空！</string>
    <string name="add_log_tv_addname">姓名：</string>
    <string name="add_log_tv_adddepartment">部门：</string>
    <string name="add_log_tv_addlogintime">登录时间：</string>
    <string name="add_log_tv_carplate">车辆牌照：</string>
    <string name="add_truck_info">车辆信息</string>
    <string name="add_log_truck_platenumber">车牌号：</string>
    <string name="platenumber">车牌号</string>
    <string name="scan_over">扫到</string>
    <string name="scan_start">未扫到</string>
    <string name="sure_tran">已交接</string>
    <string name="add_log_truck_state">车辆状态：</string>
    <string name="add_log_truck_departmentid">车辆部门：</string>
    <string name="add_login_user">加人</string>
    <string name="add_login_reduce">减人</string>
    <string name="add_login_change">换人</string>
    <string name="add_login_out">退出登录</string>
    <string name="add_truck_unbding">解绑车辆</string>
    <string name="add_truck_plan_unbding">解绑计划车辆</string>
    <string name="add_truck_unbding_ok">解绑成功</string>
    <string name="add_truck_unbding_fail">解绑失败</string>
    <string name="add_tv_total">统计信息</string>
    <string name="add_total_nuber">总物品数</string>
    <string name="add_ok_nuber">完成物品数</string>
    <string name="add_atm_againscan">重扫</string>
    <string name="add_get_key">点击获取钥匙</string>
    <string name="add_updata_key_transfer">点击确认交接</string>
    <string name="check_paw">核对密码</string>
    <string name="add_main_tv_title">任务列表</string>
    <string name="add_main_tv_warn">预警列表</string>
    <string name="add_main_bt_1">绑定押运车</string>
    <string name="add_main_bt_2">出入库物品清单</string>
    <string name="add_main_bt_3">钥匙密码核对</string>
    <string name="add_main_bt_4">业务操作</string>
    <string name="add_main_bt_5">数据登记信息</string>
    <string name="add_main_bt_6">绑定车辆</string>
    <string name="btn_title_ok">确定</string>
    <string name="btn_check_paw">下一步</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_delete">清除</string>
    <string name="add_outinstorage_title">出入库清单操作</string>
    <string name="add_outinstorage_out_tag">出库清单</string>
    <string name="add_outinstorage_in_tag">入库清单</string>
    <string name="delete_branch_down">删除误操作网点信息</string>
    <string name="delete_ok">确定删除误操作网点信息？</string>
    <string name="test_add_mian_tv3">沪B54521</string>
    <string name="test_add_mian_tv4">线路</string>
    <string name="test_add_mian_tv5">网点</string>
    <string name="test_add_mian_tv6">民生银行</string>
    <string name="test_add_mian_tv7">人民广场</string>
    <string name="test_add_mian_tv8">未完成</string>
    <string name="test_add_mian_tv9">编号02553</string>
    <string name="test_add_mian_tv10">11&#8211;25&#160;11:25</string>
    <string name="test_add_mian_tv11">11&#8211;25&#160;18:36</string>
    <string name="test_add_mian_tv12">网点名称：人民广场，共3个ATM</string>
    <string name="test_add_mian_tv13">线路1</string>
    <string name="test_add_mian_tv14">2014&#8211;11&#8211;25&#160;11:25</string>
    <string name="test_add_mian_tv15">计划</string>
    <string name="test_add_mian_tv17">实际</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_network_tip">网点登记</string>
    <string name="text_network">网点登记</string>
    <string name="text_network_name">网点名称</string>
    <string name="text_departmentname">所属部门</string>
    <string name="text_network_static">状态</string>
    <string name="text_yin_hang">所属银行</string>
    <string name="text_task_context">任务内容</string>
    <string name="text_handle_result">处理结果</string>
    <string name="text_arrival_time">到达时间</string>
    <string name="text_leave_time">离开时间</string>
    <string name="text_other_task">其他任务</string>
    <string name="add_atm_up_dialog_change">是否更新时间</string>
    <string name="add_wedge_dialog_choose_time">选择时间</string>
    <string name="main_key_check">核对钥匙</string>
    <string name="statistic_car_down">下车物品扫描总览</string>
    <string name="statistic_scan_down">请扫描下车物品</string>
    <string name="check_over">确认完成</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mian_add_mission_2">运送物品</string>
    <string name="mian_add_mission_3">回收物品</string>
    <string name="mian_add_mission_4">物品清单</string>
    <string name="title_activity_out_in_storage_">OutInStorage_Activity</string>
    <string name="text_atm_regist">机具登记列表</string>
    <string name="text_num_regist">编号</string>
    <string name="add_tansfer">交接人</string>
    <string name="add_receive">接收人</string>
    <string name="add_key_scan">请扫码</string>
    <string name="add_businessoperate">业务操作</string>
    <string name="add_atmoperate">ATM操作</string>
    <string name="add_atmoperate_title">下车操作</string>
    <string name="Not_Registrater">未登记</string>
    <string name="registrater">已登记</string>
    <string name="add_atmoperate_up">上车操作</string>
    <string name="Unsnacth_Atm">卸下物品</string>
    <string name="UpLoad_Atm">装上物品</string>
    <string name="add_atmoperate_locale">现场操作</string>
    <string name="get_off_car">确定下车？</string>
    <string name="get_up_car">确定上车？</string>
    <string name="not_up_car">确定无物品上车？</string>
    <string name="key_transfer">钥匙交接</string>
    <string name="Paw_transfer">密码交接</string>
    <string name="down_load_all_day">下载全天任务!</string>
    <string name="down_load_morning">下载上午任务!</string>
    <string name="down_load_afternoon">下载下午任务!</string>
    <string name="down_load_tips">提示：请选择需要下载的内容.</string>
    <string name="down_load_tip_head">提示</string>
    <string name="bi">笔</string>
    <string name="Yuan">元</string>
    <string name="local_UnionPay">本地银联</string>
    <string name="KingCard">金卡银联</string>
    <string name="no_net">检测到网络没有打开，是否继续？</string>
    <string name="add_log_addnub_new">新员工工号：</string>
    <string name="abb_key_transfer">交接人工号：</string>
    <string name="add_key_rec">接收人工号：</string>
    <string name="add_log_addnub_nmb">新员工密码：</string>
    <string name="add_log_confirm_nmb">确认密码：</string>
    <string name="add_change_login_success">换用户成功</string>
    <string name="add_add_login_success">添加用户成功</string>
    <string name="add_raduce_login_success">删除用户成功</string>
    <string name="add_login_not_equal">两次输入密码不相同，请重新输入</string>
    <string name="add_login_reduce_tip">确定删除当前用户？</string>
    <string name="add_logout_tip_success">退出成功</string>
    <string name="add_logout_tip_fial">退出失败</string>
    <string name="add_logout_reduce_tip2">目前只有一个用户，不可减人！</string>
    <string name="add_logout_add_tip">用户已经达到上限，不可添加!</string>
    <string name="out_nothing_ok">无物品下车</string>
    <string name="sure_out_nothing">确定无物品下车？</string>
    <string name="error_barcode">您扫描的二维码不属于标准二维码，请重试</string>
    <string name="check_scan_code">没有找到匹配的二维码！请重新扫描！</string>
    <string name="not_branch">没有匹配的网点</string>
    <string name="add_atmoperate_codeerrored">此二维码已经扫描过！</string>
    <string name="network_scan">网点扫描</string>
    <string name="network_scan_tip">请扫描网点</string>
    <string name="network_text_hint">input</string>
    <string name="network_dialog_tip">该网点无二维码？</string>
    <string name="add_atmoperate_codeerror">二维码错误！请重新扫描！</string>
    <string name="add_reset_scan">没有可重扫的数据</string>
    <string name="add_atmtool_title">ATM现场操作</string>
    <string name="add_please_scan">请扫描ATM机具</string>
    <string name="add_login_error">连接服务器失败，请重新尝试！</string>
    <string name="add_login_loading">正在登录...</string>
    <string name="binding_load">正在绑定...</string>
    <string name="keypassword_load">正在加载...</string>
    <string name="add_binding_tip">已经绑定车辆，请先解绑车辆</string>
    <string name="add_no_binding">未绑定</string>
    <string name="add_plan_number">无计划数据</string>
    <string name="add_ok_binding">已绑定</string>
    <string name="input_card_new_login">确定登陆新用户组！\n将会清空所有数据！</string>
    <string name="input_data_new_login">确定按新日期登陆！\n将会清空所有数据！</string>
    <string name="add_down_loader">下载任务失败</string>
    <string name="login_down_loader">下载任务</string>
    <string name="tv_task_type_1">正常</string>
    <string name="tv_task_type_2">其他</string>
    <string name="tv_finish_no">未完成</string>
    <string name="test_add_mian_tv16">已完成</string>
    <string name="check_next">请核对完所有钥匙！</string>
    <string name="check_box_bag">请扫描钞箱钞袋！</string>
    <string name="scan_down_atm">请扫描卸下物品！</string>
    <string name="get_on_atm">此物品已上机具！</string>
    <string name="scan_all">请扫描完所有二维码！</string>
    <string name="check_box">此钞箱已上机具！</string>
    <string name="Not_UP_car">没有可上车的物品！</string>
    <string name="Not_reScan">没有可重扫的物品</string>
    <string name="check_bog">此钞袋已上机具！</string>
    <string name="please_scan_key">请扫描钥匙！</string>
    <string name="please_scan_paw">请扫描密码！</string>
    <string name="updata_key">没有可提交的数据</string>
    <string name="atm_task_type_0">全天</string>
    <string name="atm_task_type_1">上午</string>
    <string name="atm_task_type_2">下午</string>
    <string name="box_task_type_1">钞箱</string>
    <string name="box_task_type_2">钞袋</string>
    <string name="other_task_address">目的地</string>
    <string name="tv_other_destination">目的地地址</string>
    <string name="main_task_time">更新时间：</string>
    <string name="dialog_tip_save_1">保存操作数据？</string>
    <string name="dialog_tip_save_2">任务内容不能为空！</string>
    <string name="dialog_tip_save_3">保存并上传操作数据？</string>
    <string name="dialog_tip_save_4">请全部填写！</string>
    <string name="add_key_change">钥匙交接</string>
    <string name="key_isnull">交接人或接收人不能为空</string>
    <string name="dialog_tip_save_5">更新时间：</string>
    <string name="dialog_tip_save_6">更新时间：</string>
    <string name="dialog_tip_save_7">更新时间：</string>
    <string name="add_atmoperate_statistics">统计信息</string>
    <string name="add_atmoperate_statistics_all">总物品数</string>
    <string name="add_atmoperate_statistics_done">完成物品数</string>
    <string name="regist_to_company">回库</string>
    <string name="add_atmoperate_scan_un">未扫到</string>
    <string name="add_atmoperate_scan_ed">扫到</string>
    <string name="add_wedge_dialog_code">二维码</string>
    <string name="tv_dispatch">调度消息</string>
    <string name="net_address">信息采集</string>
    <string name="txt_userName">员工1工号：</string>
    <string name="txt_passWord">员工1密码：</string>
    <string name="txt_userName2">员工2工号：</string>
    <string name="txt_passWord2">员工2密码：</string>
    <string name="btn_login">登录</string>
    <string name="btn_editss">配置</string>
    <string name="please_barcode_scan">请扫描或点击绑定车辆</string>
</resources>