<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="@mipmap/bg2">
    
	<include 
	    android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true"
        layout="@layout/comm_ok_cancel_bar"/>
	<TextView 
	    android:id="@+id/tv_title_activity"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@id/top"
		android:visibility="gone"
	    android:text="@string/add_businessoperate"
	    style="@style/generic_add_title"/>

	<ImageView
		android:id="@+id/image_logo"
		android:layout_width="@dimen/height"
		android:layout_height="@dimen/left"
		android:layout_below="@id/top"
		android:layout_marginTop="15dip"
		android:visibility="gone"
		android:layout_centerHorizontal="true"
		/>
	<LinearLayout 
	    android:id="@+id/ll_addoperatechoose_menu"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
		android:layout_centerInParent="true"
		android:paddingBottom="10dip"
	    >
	    <Button 
	        android:id="@+id/bt_add_1"
			android:layout_width="fill_parent"
	        android:layout_height="@dimen/big_btn_heignt"
	        android:text="@string/add_atmoperate_title"
	        android:background="@drawable/login_color1"
	        style="@style/generic_button_buttom"
	        />
	    <Button 
	        android:id="@+id/bt_add_2"
	        android:layout_width="fill_parent"
			android:layout_height="@dimen/big_btn_heignt"
	        android:text="@string/add_atmoperate_locale"
			android:enabled="false"
			android:layout_marginTop="20dp"
	        android:background="@drawable/login_color"
	        style="@style/generic_button_buttom"
	        />
	    <Button 
	        android:id="@+id/bt_add_3"
	        android:layout_width="fill_parent"
			android:layout_height="@dimen/big_btn_heignt"
	        android:layout_marginTop="20dip"
	        android:background="@drawable/login_color"
	        android:text="@string/add_atmoperate_up"
			android:enabled="false"
	        style="@style/generic_button_buttom"
	        />
	</LinearLayout>
</RelativeLayout>
