<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"

			  android:background="@mipmap/bg"
    >
<ScrollView
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_marginTop="0dip"
    	android:layout_marginBottom="0dip"
    	android:scrollbars="vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:gravity="center_vertical|center_horizontal"
        >
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="10dip"
    	android:orientation="horizontal"
    	android:layout_marginRight="10dip"
    	android:layout_marginLeft="10dip"
        >
      <TextView
            android:layout_width="wrap_content"
    		android:layout_height="50dip"
    		android:text="@string/txt_userName"
          />
  	<EditText
  	    	android:id="@+id/edt_username"
            android:layout_width="match_parent"
    		android:layout_height="50dip"
    		android:textColor="@color/generic_black"
    	 	android:background="@drawable/selector_edittext_bg"
      />

	</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="20dip"
    	android:layout_marginRight="10dip"
    	android:layout_marginLeft="10dip"
        >
      <TextView
            android:layout_width="wrap_content"
    		android:layout_height="50dip"
    		android:text="@string/txt_passWord"
          />
  	<EditText
  	    	android:id="@+id/edt_userpass"
            android:layout_width="match_parent"
    		android:layout_height="50dip"
    		android:password="true"
			android:textColor="@color/generic_black"
    		android:background="@drawable/selector_edittext_bg"
      />

	</LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="10dip"
    	android:orientation="horizontal"
    	android:layout_marginRight="10dip"
    	android:layout_marginLeft="10dip"
        >
      <TextView
            android:layout_width="wrap_content"
    		android:layout_height="50dip"
    		android:text="@string/txt_userName2"
          />
  	<EditText
  	    	android:id="@+id/edt_username2"
            android:layout_width="match_parent"
    		android:layout_height="50dip"
			android:textColor="@color/generic_black"
    	 	android:background="@drawable/selector_edittext_bg"
      />

	</LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="20dip"
    	android:layout_marginRight="10dip"
    	android:layout_marginLeft="10dip"
        >
      <TextView
            android:layout_width="wrap_content"
    		android:layout_height="50dip"
    		android:text="@string/txt_passWord2"
 
          />
  	<EditText
  	    	android:id="@+id/edt_userpass2"
            android:layout_width="match_parent"
    		android:layout_height="50dip"
			android:textColor="@color/generic_black"
    		android:background="@drawable/selector_edittext_bg"
    		android:password="true"
      />

	</LinearLayout>
	<ProgressBar
	    android:id="@+id/pro_bar"
	    android:layout_width="60dip"
	    android:layout_height="60dip"
	    android:visibility="gone"
	    />
	<Button
	    	android:id="@+id/btn_getpost"
	    	android:layout_marginTop="10dip"
	     	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginRight="10dip"
    		android:layout_marginLeft="10dip"
    		android:onClick="PostHttp"
    		android:text="@string/btn_login"
    		
	    />
	<Button
	    	android:id="@+id/btn_editurl"
	    	android:layout_marginTop="10dip"
	     	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginRight="10dip"
    		android:layout_marginLeft="10dip"
    		android:onClick="GoEdit"
    		android:text="@string/btn_editss" 
    		android:visibility="gone"
			android:background="@drawable/bt_long_selector"
	    />
	</LinearLayout>
	</ScrollView>
</LinearLayout>