<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@mipmap/bg2">

    <include
        android:id="@+id/comm_title_bar"
        layout="@layout/comm_ok_cancel_bar"/>

    <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/textV">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/please_barcode_scan"
                android:textSize="@dimen/list_item"
                android:textColor="@color/generic_red"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/net_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/comm_item_heignt"
            android:layout_below="@+id/textV"
            android:background="@color/generic_listview_item_bg"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"

            >




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/text_departmentname"
                android:textColor="@color/generic_blue"
                android:textSize="@dimen/comm_item_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/add_wedge_dialog_code"
                android:textColor="@color/generic_blue"
                android:textSize="@dimen/comm_item_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/text_network_static"
                android:textColor="@color/generic_blue"
                android:textSize="@dimen/comm_item_text_size"
                android:layout_marginRight="8dp"/>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list"
            android:layout_above="@+id/bt_add_bcar_bind"
            android:layout_below="@+id/net_layout"
            >
            <ListView
                android:id="@+id/car_binding_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="@dimen/view_height"
                >

            </ListView>
        </RelativeLayout>


        <Button
            android:id="@id/bt_add_bcar_bind"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/image_w"
            android:layout_marginRight="@dimen/image_w"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bt_long_selector"
            android:text="@string/add_truck_unbding"
            android:textSize="@dimen/list_item"
            />


    </RelativeLayout>



</LinearLayout>
